--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,6 @@
-# Database
-MONGO_URI=mongodb://localhost:27017/harsha-music-player
+# Supabase Configuration
+VITE_SUPABASE_URL=your-supabase-project-url
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# Server
-PORT=5000
-
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
-
-# YouTube API
-YOUTUBE_API_KEY=your-youtube-api-key-here
+# YouTube API (Optional - for production use)
+VITE_YOUTUBE_API_KEY=your-youtube-api-key-here
